--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,3 +99,14 @@ jobs:
           package-token: ${{ secrets.PACKAGE_TOKEN }}
           manifest-url: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.json
           notes-url: https://github.com/${{github.repository}}/releases/tag/${{env.VERSION}}
+
+  github-releases-to-discord:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Github Releases To Discord
+        uses: SethCohen/github-releases-to-discord@v1.13.1
+        with:
+          webhook_url: ${{ secrets.WEBHOOK_URL }}
+          username: "Midi Items Showcase - Community Release"
