--- a/packData/misc-spells/Beast_Sense_mhfyFJrf5UNUP7PE.json
+++ b/packData/misc-spells/Beast_Sense_mhfyFJrf5UNUP7PE.json
@@ -267,7 +267,7 @@
     "systemVersion": "3.1.2",
     "coreVersion": "12.331",
     "createdTime": 1699554950768,
-    "modifiedTime": 1724968786152,
+    "modifiedTime": 1732050343507,
     "lastModifiedBy": "B2BBHntfpytXE8DP",
     "compendiumSource": null,
     "duplicateSource": null
@@ -277,6 +277,6 @@
     "B2BBHntfpytXE8DP": 3
   },
   "_id": "mhfyFJrf5UNUP7PE",
-  "sort": 800000,
+  "sort": 1500000,
   "_key": "!items!mhfyFJrf5UNUP7PE"
 }
