--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "allowImportingTsExtensions": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["fvtt-types", "sequencer", "dnd5e-types/dnd5e/dnd5e.d.mts"],
+    "types": ["fvtt-types", "sequencer", "dnd5e/dnd5e/dnd5e.d.mts"],
     "strict": true,
 
     "verbatimModuleSyntax": true,
